hide nav scrollbar and fix minue design issues

--- a/frontend/src/styles/nav.scss
+++ b/frontend/src/styles/nav.scss
@@ -1,9 +1,24 @@
 @import "config";
 
 .nav {
-  width: 12em;
+  width: 14.5em;
   padding: 1em 1em;
+  padding-top: 0;
   background-color: $primary-color;
+  overflow-y: auto;
+  position: relative;
+
+
+  /* Hide the scrollbar for Internet Explorer, Edge and Firefox */
+  -ms-overflow-style: none;
+  /* Internet Explorer and Edge */
+  scrollbar-width: none;
+
+  /* Firefox */
+  /* Hide the scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &__container {
     padding-top: 1.4em;
@@ -30,12 +45,17 @@
     padding-top: 2em;
   }
 
+  &__playlist-container {
+    padding: bottom 0 !important;
+
+  }
+
   &__dropdown-conatiner,
   &__playlist-container,
   & section:last-child {
     display: flex;
     flex-flow: column;
-    padding-bottom: 3em;
+    padding-bottom: 1em;
 
     li {
       padding: .44em 0em;
@@ -141,7 +161,7 @@
   }
 
   .collaper__name {
-    padding: 1.3em 0 !important;
+    // padding: 1.3em 0 !important;
     display: flex;
     justify-content: center;
     align-items: center;
